--- a/devops.html
+++ b/devops.html
@@ -39,13 +39,13 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oQVLafwq&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=nsZdoMwj'>Jobvite, Inc. Careers - Senior DevOps Tooling Engineer (remote)</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
 <h5><a href='https://impraise.recruitee.com/o/devops-engineer-medior'>
       DevOps Engineer Medior - Impraise
     </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='http://flyhtaerospace.applytojob.com/apply/ow1nxWO88P/DevOps-Engineer'>DevOps Engineer - FLYHT Aerospace - Career Page</a></h5> 
@@ -56,7 +56,7 @@
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4069426002'>Job Application for Backend Engineer- Configure(Kubernetes, Auto DevOps, ChatOps) at GitLab</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/gitlab/jobs/4069426002'>Job Application for Backend Engineer- Configure(Kubernetes, Auto DevOps, ChatOps) at GitLab</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -104,7 +104,7 @@
 <p><span class="badge badge-light">NYC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://orbitpeople.applytojob.com/apply/oHWBYGP2jX/AWSCloudDevOps-Engineer'>AWS/Cloud/DevOps Engineer - Orb IT People - Career Page</a></h5> 
+<h5><a href='http://orbitpeople.applytojob.com/apply/oHWBYGP2jX/AWSCloudDevOps-Engineer'>AWS/Cloud/DevOps Engineer - Orb IT People - Career Page</a></h5> 
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -225,7 +225,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Galway</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://so1.join.com/jobs/466171-junior-devops-engineer-m-f-x-onsite-remote'>Job @ SO1 (Remote): Junior DevOps Engineer (m/f/x)... | JOIN</a></h5> 
+<h5><a href='https://so1.join.com/jobs/466171-junior-devops-engineer-m-f-x-onsite-remote'>Job @ SO1 (Remote): Junior DevOps Engineer (m/f/x)... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -249,7 +249,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698330889-devops-engineer-unix-administrator'>Bey DevOps Engineer & Unix Administrator | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698330889-devops-engineer-unix-administrator'>Bey DevOps Engineer & Unix Administrator | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -269,7 +269,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/paloaltonetworks/job/oPb1afwV'>Palo Alto Networks Careers - DevOps SRE Engineer (Information Security)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/paloaltonetworks/job/oPb1afwV'>Palo Alto Networks Careers - DevOps SRE Engineer (Information Security)</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -297,7 +297,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Zug, Switzerland</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://srijantech.recruiterbox.com/jobs/fk03ilg'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://srijantech.recruiterbox.com/jobs/fk03ilg'>
     Engineering Manager - DevOps at Srijan Technologies Pvt Ltd
 </a></h5> 
 <p><span class="badge badge-light">Gurugram, Haryana</span></p>
@@ -333,7 +333,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Linkbynet/743999698252976-administrateur-devops-h-f'>Linkbynet Administrateur Devops H/F | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Linkbynet/743999698252976-administrateur-devops-h-f'>Linkbynet Administrateur Devops H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -393,7 +393,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Singapore Philippines  Singapore Philippines Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://endava.referrals.selectminds.com/jobs/devops-engineer-microsoft-azure-5133'>Devops Engineer - Microsoft Azure - Endava Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endava.referrals.selectminds.com/jobs/devops-engineer-microsoft-azure-5133'>Devops Engineer - Microsoft Azure - Endava Careers</a></h5> 
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
