--- a/frontend.html
+++ b/frontend.html
@@ -38,11 +38,25 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://watermelon.recruitee.com/o/mediorsenior-frontend-developer'>
+      Medior/Senior Frontend Developer - Watermelon
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/nobul/bddd8265-866e-4349-a060-76d6064e40a4'>Nobul - Front End Web Developer - React</a></h5> 
+<p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://itron.referrals.selectminds.com/jobs/front-end-software-engineer-intern-3015'>Front-end Software Engineer Intern - Itron Careers</a></h5> 
+<p><span class="badge badge-light">Budapest</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/chegg/job/oIWrbfw0'>Chegg Careers - Senior Front End Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/system1/cc588e0d-e330-42ef-87a7-015a1e797a51'>System1 - Software Engineer (Front End)</a></h5> 
+<h5><a href='https://jobs.lever.co/system1/cc588e0d-e330-42ef-87a7-015a1e797a51'>System1 - Software Engineer (Front End)</a></h5> 
 <p><span class="badge badge-light">Bellevue, WA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -82,23 +96,23 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://walletservices.recruitee.com/o/front-end-developer-javascriptreact'>
+<h5><a href='https://walletservices.recruitee.com/o/front-end-developer-javascriptreact'>
       Front End Developer (Javascript/React) - Wallet.Services
     </a></h5> 
 <p><span class="badge badge-light">Edinburgh, United Kingdom</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://searchmetrics.recruitee.com/l/en/o/senior-software-engineer-mfx-focus-frontend'>
+<h5><a href='https://searchmetrics.recruitee.com/l/en/o/senior-software-engineer-mfx-focus-frontend'>
       Senior Software Engineer (m/f/x) - Focus Frontend - Searchmetrics GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qXWaVfwI&k=Job&j=oIIrbfwM&__jvst=Employee+Referral&__jvsd=sP0W7gwD&__jvsc=Twitter&bid=n404nMwM'>Ramsey Solutions Careers - Senior Frontend Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qXWaVfwI&k=Job&j=oIIrbfwM&__jvst=Employee+Referral&__jvsd=sP0W7gwD&__jvsc=Twitter&bid=n404nMwM'>Ramsey Solutions Careers - Senior Frontend Developer</a></h5> 
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/impinj/job/oAA3afw7'>Impinj Careers - Front End Web Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/impinj/job/oAA3afw7'>Impinj Careers - Front End Web Developer</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -110,7 +124,7 @@
 <p><span class="badge badge-light">Boston, MAUnited States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ruelala/jobs/1931537'>Job Application for Principal Front-End Engineer at Rue Gilt Groupe</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ruelala/jobs/1931537'>Job Application for Principal Front-End Engineer at Rue Gilt Groupe</a></h5> 
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -130,7 +144,7 @@
 <p><span class="badge badge-light">Carlsbad, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://searchmetrics.recruitee.com/o/senior-software-engineer-mfx-focus-frontend'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://searchmetrics.recruitee.com/o/senior-software-engineer-mfx-focus-frontend'>
       Senior Software Engineer (m/f/x) - Focus Frontend - Searchmetrics GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -169,7 +183,7 @@ Enterprise Software team in building highly interactive, intuitive and responsiv
 <p><span class="badge badge-light">Brazil  North America</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698396618-fresher-front-end-software-engineer'>KMS Technology FRESHER FRONT-END SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698396618-fresher-front-end-software-engineer'>KMS Technology FRESHER FRONT-END SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -190,7 +204,7 @@ standard for measuring real-world mobile network experience. Using billions of?.
 freedom to thrive anywhere. We are building a banking service that allows you to
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/vgs/c67a87f2-4f38-4292-af00-f4aeb29c2ab0'>Very Good Security - Frontend Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vgs/c67a87f2-4f38-4292-af00-f4aeb29c2ab0'>Very Good Security - Frontend Engineer</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -210,7 +224,7 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BrandungGmbHCoKG/743999698260691-senior-frontend-developer-w-m-d-'>brandung GmbH & Co. KG Senior Frontend Developer (w/m/d) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BrandungGmbHCoKG/743999698260691-senior-frontend-developer-w-m-d-'>brandung GmbH & Co. KG Senior Frontend Developer (w/m/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Deutschland  Berlin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -218,7 +232,7 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">Berlin, Deutschland  Berlin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.xing.com/jobs/hamburg-frontend-developer-52201363'>Frontend Developer (m/w/d) in Hamburg | XING Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.xing.com/jobs/hamburg-frontend-developer-52201363'>Frontend Developer (m/w/d) in Hamburg | XING Jobs</a></h5> 
 <p><span class="badge badge-light">Hamburg</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -226,7 +240,7 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">New York City, NY</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Deezer/743999698356459-front-end-developer-content-team-internship-'>Deezer Front End Developer - Content Team (Internship) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Deezer/743999698356459-front-end-developer-content-team-internship-'>Deezer Front End Developer - Content Team (Internship) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -316,7 +330,7 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/graphcore/jobs/4195280002'>Job Application for Analysis Tools Frontend Engineer at Graphcore</a></h5> 
+<h5><a href='https://boards.greenhouse.io/graphcore/jobs/4195280002'>Job Application for Analysis Tools Frontend Engineer at Graphcore</a></h5> 
 <p><span class="badge badge-light">Bristol, UK</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -402,11 +416,11 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://liqid.join.com/jobs/462086-senior-frontend-developer-m-f-d'>Job @ LIQID Investments (Berlin): Senior Frontend ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://liqid.join.com/jobs/462086-senior-frontend-developer-m-f-d'>Job @ LIQID Investments (Berlin): Senior Frontend ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/teamviewer-global/job/o8Tqbfwm'>TeamViewer Global Careers - Senior Frontend Developer (m/f/d)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/teamviewer-global/job/o8Tqbfwm'>TeamViewer Global Careers - Senior Frontend Developer (m/f/d)</a></h5> 
 <p><span class="badge badge-light">Yerevan</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -452,19 +466,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584441'>Stellenangebot: Frontend Developer (w/m/d) (K?ln) ? dasauge? Stellenmarkt</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584443'>Stellenangebot: Senior Frontend Developer (w/m/d) (K?ln) ? dasauge? Stellenmarkt</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.jobware.net/Job/Intern-m-w-d-Frontend-Development-Deloitte-aiStudio.341092205.html?jw_chl_seg=YOURJOBINGERMANY&skin=zaehlpixel_only'>Intern (m/w/d) Frontend Development Deloitte aiStudio | Deloitte GmbH Wirtschaftspr?fungsgesellschaft | Job</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
