--- a/deep-learning.html
+++ b/deep-learning.html
@@ -175,7 +175,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697330844-working-student-deep-learning-ai-computer-vision-data-management'>Bosch Group Working student Deep Learning - AI - Computer Vision - Data Management | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697330844-working-student-deep-learning-ai-computer-vision-data-management'>Bosch Group Working student Deep Learning - AI - Computer Vision - Data Management | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -202,7 +202,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/MeeticGroup/743999696341329-stage-data-scientist-deep-learning-computer-vision-h-f'>Meetic Group Stage Data Scientist/ Deep Learning Computer vision H/F | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MeeticGroup/743999696341329-stage-data-scientist-deep-learning-computer-vision-h-f'>Meetic Group Stage Data Scientist/ Deep Learning Computer vision H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -262,7 +262,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/NVIDIAExternalCareerSite/job/US-CA-Santa-Clara/Senior-Software-Engineer--AI-Infrastructure---Deep-Learning_JR1924736'>Senior Software Engineer, AI Infrastructure - Deep Learning</a></h5> 
+<h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/NVIDIAExternalCareerSite/job/US-CA-Santa-Clara/Senior-Software-Engineer--AI-Infrastructure---Deep-Learning_JR1924736'>Senior Software Engineer, AI Infrastructure - Deep Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... ... the hottest state of the art fields: Deep Learning, Artificial Intelligence, and 
 Autonomous Vehicles. If you're a creative and autonomous computer scientist 
@@ -369,7 +369,7 @@ and GPUs?...</p>
 <p>Sep 5, 2019 ... Apply online for the job of Deep Learning Engineer with Strong iOS Development 
 Skills at Crisalix.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Voxelcloud/743999681864785-deep-learning-scientist'>Voxelcloud Deep Learning Scientist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Voxelcloud/743999681864785-deep-learning-scientist'>Voxelcloud Deep Learning Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-14</p>
 <hr/>
@@ -418,7 +418,7 @@ Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <p><span class="badge badge-light">Kharkiv Oblast, Ukraine</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1855962'>Job Application for Sr. Software Engineer, AI and Deep Learning at ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1855962'>Job Application for Sr. Software Engineer, AI and Deep Learning at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... We are offering a career opportunity combining both your passion and skills as a 
 software engineer while also allowing you to work with state-of-the-art?...</p>
